<resources>
    <string name="app_name">FoodbreakInc</string>
    <string name="app_logo_description">FoodBreak</string>

    <string name="app_operation_successful">iconCheck</string>

    <!-- Auth Module -->
    <string name="auth_register_slogan">Make your account to make use of Foodbreak.</string>

    <string name="auth_register">Account</string>
    <string name="auth_log_in">Log In</string>

    <string name="auth_prompt_email">Email</string>
    <string name="auth_prompt_firstname">First name</string>
    <string name="auth_prompt_lastname">Last name</string>
    <string name="auth_prompt_company_name">Company name</string>
    <string name="auth_prompt_brithdate">Date of Birth</string>
    <string name="auth_prompt_location">Location</string>
    <string name="auth_prompt_username">Username</string>
    <string name="auth_prompt_password">Password</string>
    <string name="auth_prompt_password_confirm">Confirm password</string>

    <string name="auth_btn_register">REGISTER</string>
    <string name="auth_btn_register_company">COMPANY?</string>
    <string name="auth_btn_register_consumer">CONSUMER?</string>
    <string name="auth_btn_login">LOGIN</string>
    <string name="auth_btn_login_no_account">NO ACCOUNT?</string>


    <!-- Product Module -->
    <string name="product_lbl_food_menu">FOOD</string>
    <string name="product_lbl_drink_menu">DRINKS</string>
    <string name="product_show_title">MENU</string>
    <string name="product_show_admin_title">PRODUCTS</string>

    <string name="product_default_price">€ 0.00</string>
    <string name="product_default_title">Product Title</string>
    <string name="product_btn_add_to_cart">+</string>
    <string name="product_btn_remove_from_cart">-</string>
    <string name="product_btn_go_to_orders">ORDERS</string>

    <string name="product_lbl_create">New Product</string>
    <string name="product_create_prompt_product_name">Product name</string>
    <string name="product_lbl_create_product_type">Product type</string>
    <string name="product_create_radio_food">Food</string>
    <string name="product_create_radio_drink">Drink</string>
    <string name="product_create_amount">Product amount</string>
    <string name="product_create_price">Product price</string>
    <string name="product_btn_add">ADD</string>
    <string name="image_btn_back">Back</string>
</resources>
