<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".modules.auth.activities.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/auth_log_in"
        android:textAlignment="textStart"
        android:textColor="@color/titleText"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/auth_prompt_username"
        android:labelFor="@+id/etUsername"
        android:textAlignment="textStart"
        android:textColorHint="@color/textPrimary"
        android:theme="@style/TextLabel"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            style="@style/editTextDefaults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="@color/textPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/auth_prompt_password"
        android:labelFor="@+id/etPassword"
        android:textAlignment="textStart"
        android:textColorHint="@color/textPrimary"
        android:theme="@style/TextLabel"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/etLayoutUsername"
        app:layout_constraintStart_toStartOf="@+id/etLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/etLayoutUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/editTextDefaults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:textColor="@color/textPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="254dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/foodbreak_logo_trans_bg_white_letters"
    />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNoAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/auth_btn_login_no_account"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:rippleColor="#ffffff"
        app:strokeColor="#ffffff" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/auth_btn_login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:rippleColor="#ffffff"
        app:strokeColor="#ffffff" />

    <ImageView
        android:id="@+id/foo"
        android:layout_width="254dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/foodbreak_logo_trans_bg_white_letters"
    />


</androidx.constraintlayout.widget.ConstraintLayout>