<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlProductItemLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/lblProductTitle"
            android:layout_width="178dp"
            android:layout_height="0dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/product_default_title"
            android:textAlignment="textStart"
            android:textColor="@color/titleText"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAddToCart"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/lblProductPrice"
            android:layout_width="56dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/product_default_price"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
            app:layout_constraintEnd_toStartOf="@+id/btnAddToCart"
            app:layout_constraintTop_toTopOf="@+id/btnAddToCart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddToCart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/product_btn_add_to_cart"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnRemoveFromCart"
            app:layout_constraintEnd_toStartOf="@+id/btnRemoveFromCart"
            app:layout_constraintTop_toTopOf="@+id/btnRemoveFromCart"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#ffffff"
            app:strokeColor="#ffffff" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemoveFromCart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/btnAddToCart"
            android:layout_alignBottom="@+id/btnAddToCart"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/product_btn_remove_from_cart"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#ffffff"
            app:strokeColor="#ffffff" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>