<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".activities.product.ProductCompanyActivity">

    <TextView
        android:id="@+id/lblFoodTitle"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/product_show_admin_title"
        android:textAlignment="center"
        android:textColor="@color/titleText"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lblFoodMenu"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:paddingLeft="5dp"
        android:text="@string/product_lbl_food_menu"
        android:textColor="@color/titleText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFoodTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProductFoodList"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="5dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lblFoodMenu"
        app:layout_constraintTop_toBottomOf="@+id/lblFoodMenu">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/lblDrinkMenu"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:paddingLeft="5dp"
        android:text="@string/product_lbl_drink_menu"
        android:textColor="@color/titleText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lblFoodMenu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/lblFoodMenu"
        app:layout_constraintTop_toBottomOf="@+id/rcvProductFoodList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProductDrinkList"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="5dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lblDrinkMenu"
        app:layout_constraintTop_toBottomOf="@+id/lblDrinkMenu">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/footerBrand"
        android:layout_width="98dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcvProductDrinkList"
        app:layout_constraintVertical_bias="0.493"
        app:srcCompat="@mipmap/foodbreak_logo_trans_bg_white_letters" />

</androidx.constraintlayout.widget.ConstraintLayout>
